manifests/svc.yml
apiVersion: v1
kind: Service
metadata: 
   name: python-webapp
spec:
    selector:
      app: python-webapp
    type: NodePort
    ports:
    - protocol: TCP
      targetPort: 5000
      port: 80
